# AI_automated_trading

./: .gitignore  LICENSE  README.md  config.toml  upgrade.sh
src/arbitrage-bot/: api-ai-module.js  index.js  index2_ai.js  path-finder.js  risk-analyzer.js
src/liquidation-bot/: analyze-volatility.js  check-oracle.js  create-test-position.js  liquidation-bot.js
src/liquidation-bot/client/: create-positions.js
src/utils/: calc-utils.js  dex-utils.js
test-liquidation/: Anchor.toml  Cargo.toml
test-liquidation/programs/test-liquidation/: Cargo.toml
test-liquidation/programs/test-liquidation/src/: lib.rs
test-liquidation/tests/: test-liquidation.ts
